--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "es6",
         "esModuleInterop": true,
         "moduleResolution": "node",
-        "module": "commonjs"
+        "module": "ES2022"
     },
     "include": [
         "api/*",
