--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "start": "yarn build && node build/index.js"
+    "start": "node build/index.js"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
